--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
